finish desktop version

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
   <body>
     <header class="header">
-      <img class="logo" alt="OmniFood Logo" src="/img/omnifood-logo.png" />
+      <a href="#">
+        <img class="logo" alt="OmniFood Logo" src="/img/omnifood-logo.png"
+      /></a>
+
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">section 1</a></li>
@@ -609,5 +612,79 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img class="logo" alt="OmniFood Logo" src="/img/omnifood-logo.png"
+          /></a>
+
+          <ul class="social-link">
+            <li>
+              <a href="#" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+
+          <p class="copyright">
+            Copyrigth &copy; 2027 by OmniFood, Inc. all right reserved
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact Us</p>
+          <address class="contacts">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+          </address>
+          <p>
+            <a href="tel:415-201-6370" class="footer-link">415-201-6370</a
+            ><br />
+            <a href="mailto:hello@omnifood.com" class="footer-link"
+              >hello@omnifood.com</a
+            >
+          </p>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">Create account</a></li>
+            <li><a href="#" class="footer-link">Sign in</a></li>
+            <li><a href="#" class="footer-link">iOS app</a></li>
+            <li><a href="#" class="footer-link">Android app</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">About Omnifood</a></li>
+            <li><a href="#" class="footer-link"> For Business</a></li>
+            <li><a href="#" class="footer-link">Cooking partners</a></li>
+            <li><a href="#" class="footer-link">Careers</a></li>
+          </ul>
+        </div>
+
+        <div class="nav-col">
+          <p class="footer-heading">Resurces</p>
+          <ul class="footer-nav">
+            <li><a href="#" class="footer-link">Recipe directory</a></li>
+            <li><a href="#" class="footer-link">Help center</a></li>
+            <li><a href="#" class="footer-link">Privacy & terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
